# spi_lcd_touch

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/dsp_tools/: CMakeLists.txt  batch_absolute.c  circular_integrator.c  convert_helpers.c  datatype_convert_helpers.c  dsp.c  filter10c_float.c  filter_helpers.c
components/dsp_tools/include/: batch_absolute.h  circular_integrator.h  convert_helpers.h  datatype_convert_helpers.h  dsp.h  filter10c_float.h  filter_helpers.h
components/gui/: CMakeLists.txt  screen_1_cb.c  screen_2_cb.c
components/gui/generated_component/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
components/gui/generated_component/images/: ui_img_connect_small_png.c
components/gui/generated_component/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
components/libssh2/tests/: session_fixture.h
components/qmi8658/: CMakeLists.txt  qmi8658.c
components/qmi8658/include/: qmi8658.h  qmi8658_def.h
components/ssh_task/: CMakeLists.txt  Kconfig.projbuild
components/ssh_task/inc/: ssh_driver.h  ssh_task.h
components/ssh_task/src/: ssh_driver.c  ssh_task.c
main/: CMakeLists.txt  Kconfig.projbuild  display_config.h  display_hardware_helpers.c  display_hardware_helpers.h  idf_component.yml  lvgl_demo_ui.c  lvgl_demo_ui.h  lvgl_drive_task.c  lvgl_drive_task.h  lvgl_ui.c  lvgl_ui.h  main.c  spi_lcd_touch_example_main.c
squareline_proj/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py  ui.c  ui.h
squareline_proj/screens/: ui_Screen1.c
